commiting changes (though they are not complete to be pushed)
