# models/requests/company.go
@@ -1,0 +1,6 @@
+package requests
+
+type CreateCompany struct {
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
